# nectar-osc

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  py3dist-overrides  rules
nectar_osc/: compute.py  config.py  freshdesk.py  identity.py  lister.py  mailout.py  network.py  plugin.py  rating.py  security.py  show.py  util.py
nectar_osc/osc/: plugin.py  security.py
nectar_osc/templates/: README.rst  affected.frag  greeting.frag  host-planned-outage-notification.tmpl  outage-notification.tmpl  reboot-notification.tmpl  schedule.frag  signoff.frag  zone-planned-backplane-notification.tmpl  zone-planned-network-notification.tmpl  zone-planned-outage-notification-v2.tmpl  zone-planned-outage-notification.tmpl
nectar_osc/tests/: nectar-osc.conf  test.py
nectar_osc/tests/unit/: fakes.py  test_compute.py  test_identity.py  test_mailout.py  test_plugin.py  test_util.py
