[metadata]
name = nectar-osc
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = OpenStack client plugin for misc Nectar tooling
description_file =
    README.md
keywords = varroa
home_page = https://github.com/NeCTAR-RC/python-nectar-osc
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = nectar-osc
include_package_data = True

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
openstack.cli.extension =
    nectar = nectar_osc.plugin
openstack.nectar.v1 =
    nectar security instance lock = nectar_osc.security:LockInstance
    nectar security instance unlock = nectar_osc.security:UnlockInstance
    nectar security instance delete = nectar_osc.security:DeleteInstance
    nectar server show = nectar_osc.show:ShowInstance
    nectar server securitygroups = nectar_osc.show:ShowSecuritygroups
    nectar flavor list = nectar_osc.rating:ListFlavors
#    nectar mailout desktops = nectar_osc.mailout:Desktops
    nectar mailout instances = nectar_osc.mailout:Instances
#    nectar mailout volumes = nectar_osc.mailout:Volumes
    nectar mailout cleanup = nectar_osc.mailout:Cleanup
    nectar mailout send = nectar_osc.mailout:Send

oslo.config.opts =
    nectar_osc = nectar_osc.config:list_opts
